# wnyc-radio-archive-transcriber

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml
.github/workflows/: continuous-deployment.yaml  scrape.yaml  transcribe.yaml
data/input/html/details/: IO_0004f7ef-505c-43c7-a254-ec9dfc0af68f.html  IO_00136f74-56f1-4dfc-ba26-d9045fa94b72.html  IO_002e793a-eb20-4b26-920c-23e60b52dac4.html  IO_002f4d57-22b3-427c-a5a1-3c35861d8263.html  IO_003aec70-f571-4f37-88a6-c5dd3b9dae1a.html  IO_004fbc02-3904-471f-97c5-ce448263b202.html  IO_00578799-5566-45f7-aeaf-463023dd4a1b.html  IO_009c5347-df09-4f18-9632-b12ed048ef3e.html  IO_00afae65-b4e7-45a6-a22d-ac06feb18c6b.html  IO_01015608-1e8f-4a4d-8da6-d7deae2dc563.html  IO_010211d7-cdcb-43eb-89c9-1819a3f69f88.html  IO_012fb625-5744-4670-b851-9521fb751833.html  IO_0153bf56-c2c8-4297-b74a-8d0c85c72570.html  IO_015fe1a4-2904-4b2b-ac6d-775b609dfbb5.html  IO_016db594-929f-43de-baaf-d4b7623d8dc9.html  IO_017cbc3e-b41a-446a-b91f-4cc7d1f24154.html  IO_01968151-abd7-487e-b4e4-c1382ff2e2e2.html  IO_01bc2d14-644f-41c3-a505-2d648e22497b.html  IO_01d8c1d0-d705-4eee-8902-a4de3fa7dfc6.html  IO_01dd078c-fc4d-45fe-8086-bef1c9ec6077.html  IO_01df78f1-d20c-481c-8952-3e6452862fd5.html  IO_01e40c43-ea9e-43c3-be76-1b56de2eab48.html  IO_01ece2bb-180b-440f-94fe-44622e56003e.html  IO_02108197-3578-4f82-baeb-11d30884f622.html  IO_0222f7f0-3853-4f74-a4f7-65c386410b82.html  IO_022fc4a1-8f98-463b-aa6a-6c012aa8f6f5.html  IO_02322de7-daa2-46d2-a4db-1b6546d4d1c8.html  IO_0233c142-7f0b-4660-8a37-7c10485ea112.html  IO_023ce55f-ca9f-47f8-9412-71fb2fe0a05d.html  IO_02412a6b-e993-445b-a283-7fbd9f35a630.html  IO_0243df43-5e06-4fc3-9051-03e6bad3519d.html  IO_024d7d0f-fd04-435f-b2f1-4a8fc685e7ed.html  IO_0257c905-0644-46f6-924b-e8a786f3ef62.html  (+4125 more)
data/input/json/: pages.json
data/output/: IO_0004f7ef-505c-43c7-a254-ec9dfc0af68f.txt  IO_003aec70-f571-4f37-88a6-c5dd3b9dae1a.txt  IO_009c5347-df09-4f18-9632-b12ed048ef3e.txt  IO_00afae65-b4e7-45a6-a22d-ac06feb18c6b.txt  IO_0153bf56-c2c8-4297-b74a-8d0c85c72570.txt  IO_015fe1a4-2904-4b2b-ac6d-775b609dfbb5.txt  IO_016db594-929f-43de-baaf-d4b7623d8dc9.txt  IO_017cbc3e-b41a-446a-b91f-4cc7d1f24154.txt  IO_01968151-abd7-487e-b4e4-c1382ff2e2e2.txt  IO_01bc2d14-644f-41c3-a505-2d648e22497b.txt  IO_01dd078c-fc4d-45fe-8086-bef1c9ec6077.txt  IO_01df78f1-d20c-481c-8952-3e6452862fd5.txt  IO_01e40c43-ea9e-43c3-be76-1b56de2eab48.txt  IO_0257c905-0644-46f6-924b-e8a786f3ef62.txt  IO_027112c4-c9e3-48b2-a84c-e304cde7370a.txt  IO_0271e690-d356-4e2b-a686-9bc47c871045.txt  IO_02759731-f934-4e1a-8864-9c83e1e2d39b.txt  IO_02ada673-476b-41df-a724-d1329d07680f.txt  IO_02b040ad-6ae3-4572-89f3-215e31161a0e.txt  IO_02b4bd35-4766-4376-beff-debbd5a92055.txt  IO_02bc0065-822e-4db0-972b-f41338dd3da7.txt  IO_02bd9030-95c9-4097-ab45-cdaacb46e6de.txt  IO_02cc4931-d13a-4ba9-a8d4-aad1a79200f0.txt  IO_038ec957-7298-4e0b-916c-17cb40ad7cb0.txt  IO_040091c9-7b20-49e3-b07f-b3d612835243.txt  IO_040df7b4-dbf4-41b0-b497-88e0a878d7e9.txt  IO_0426c102-2f79-4dd6-99fa-6db019fbb099.txt  IO_044254e1-cf88-440c-9896-a8750b0d278e.txt  IO_0460cc6b-a873-4526-8df0-1db5cb7e0b53.txt  IO_04f34db4-b510-4d76-91db-800fccee26e7.txt  IO_055a201e-6d3f-4d40-9fd3-29e4ecac478a.txt  IO_05835ccd-04f5-407e-bd4b-7201ea836189.txt  IO_05a294c7-c8ed-4d2f-b38e-8258e2ddd68b.txt  IO_05b814be-a277-4cdf-9ef4-5e30e1e3a755.txt  IO_05ddcac3-294d-483e-9464-b22a111dc534.txt  IO_065a892d-6a59-4278-a8f5-537b167b577c.txt  IO_06b9715b-64fe-4831-97e8-357c7c82ea5d.txt  IO_06e9d21e-79e6-44d4-b46d-e246a43c016f.txt  IO_070119d1-5c1b-4f88-bfb6-f9e88333d95a.txt  IO_0729bb2e-9dc3-492f-97f6-53488aa85a35.txt  (+1472 more)
pipeline/: count.py  files.py  scrape.py  settings.py  transcribe.py  untranscribed.py  utils.py
(+174 files in other folders)
