[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "wnyc-radio-archive-transcriber"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    'bs4',
    'click',
    'openai-whisper',
    'rich',
    'requests',
]
authors = [
  { name="Ben Welsh", email="b@palewi.re" },
]
description = "Transcribing audio recordings of WNYC radio broadcasts preserved by the New York City Municipal Archive"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
test = [
    "pytest-runner",
    "pytest-cov",
    "pytest-env",
    "pytest-vcr",
    "pytest-xdist",
]
mypy = [
    "mypy",
    "types-requests",
]

[project.urls]
Documentation = "https://palewi.re/docs/your-respository/"
Maintainer = "https://github.com/palewire/"
Source = "https://github.com/palewire/your-respository/"
Issues = "https://github.com/palewire/your-respository/issues/"

[tool.setuptools]
packages = ["pipeline"]

[tool.setuptools_scm]
