[build-system]
requires = ["setuptools >= 61.0"]

[project]
name = "wnyc-radio-archive-transcriber"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    'bs4',
    'click',
    'openai-whisper',
    'retry',
    'rich',
    'requests',
    'pre-commit',
]
authors = [
  { name="Ben Welsh", email="b@palewi.re" },
]
description = "Transcribing audio recordings of WNYC radio broadcasts preserved by the New York City Municipal Archive"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
mypy = [
    "mypy",
    "types-requests",
    "types-retry",
]

[project.urls]
Maintainer = "https://github.com/palewire/"
Source = "https://github.com/palewire/wnyc-radio-archive-transcriber"
Issues = "https://github.com/palewire/wnyc-radio-archive-transcriber/issues/"

[tool.setuptools]
packages = ["pipeline"]
